Them giao dien in ra form

--- a/Giaodien/index.html
+++ b/Giaodien/index.html
@@ -199,7 +199,8 @@
                                                             <td>
 
                                                                 <a class="link request-item"
-                                                                    href="#carouselExampleControls" data-slide="next" name="1">
+                                                                    href="#carouselExampleControls" data-slide="next"
+                                                                    name="1">
                                                                     <span
                                                                         class="badge badge-pill text-white font-medium badge-danger mr-2">Work</span>
                                                                     <span class="text-dark">Lorem ipsum
@@ -255,7 +256,8 @@
                                                             </td>
                                                             <!-- Message -->
                                                             <td>
-                                                                <a class="link request-item" href="#carouselExampleControls">
+                                                                <a class="link request-item"
+                                                                    href="#carouselExampleControls">
                                                                     <span
                                                                         class="badge badge-pill text-white font-medium badge-warning mr-2">Friend</span>
                                                                     <span class="font-light text-dark">Bitbucket (commit
@@ -586,9 +588,21 @@
                                 <div class="col-md-8 border-right">
                                     <br>
                                     <h4 class="font-weight-bold">SUPPLY REQUEST(YÊU CẦU CUNG CẤP)</h4>
-                                    <p class="font-italic text-muted">Trạng thái:<span class="text-primary ml-2">Đang
-                                            chờ
-                                            duyệt</span></p>
+                                    <div class="row">
+                                        <div class="col-11">
+                                            <p class="font-italic text-muted">Trạng thái:<span
+                                                    class="text-primary ml-2">Đang
+                                                    chờ
+                                                    duyệt</span></p>
+                                        </div>
+                                        <div class="col-1">
+                                            <a href="./form.html" class="text-dark" target="_blank">
+                                                <i class="fas fa-print"></i>
+                                            </a>
+
+                                        </div>
+                                    </div>
+
                                     <hr>
                                     <div class="row">
                                         <div class="col">
@@ -820,8 +834,6 @@
                                         <p>Nếu có thì yêu cầu như thế nào ( cho vào đơn giá bán hàng , hay yêu cầu DN …)
                                         </p>
                                     </div>
-                                </div>
-                                <div class="col-md-2">
                                     <h5 class="mt-4 text-success">HOẠT ĐỘNG CHÍNH</h5>
                                     <hr>
                                     <ul class="timeline">
@@ -849,6 +861,9 @@
                                                 vitae nunc vitae, mollis pharetra velit. Sed nec tempor nibh...</p>
                                         </li>
                                     </ul>
+                                </div>
+                                <div class="col-md-2">
+                                    
                                 </div>
                             </div>
 
