thêm file script

--- a/Giaodien/form-view.html
+++ b/Giaodien/form-view.html
@@ -545,6 +545,7 @@
     <script type='text/javascript' src="js/bootstrap-typeahead.js"></script>
     <script type='text/javascript' src="js/mention.js"></script>
     <script src="js/form.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
