--- a/Giaodien/admin.html
+++ b/Giaodien/admin.html
@@ -14,6 +14,15 @@
 </head>
 
 <body>
+
+    <button class="translate" id="en-gb">English</button>
+    <button class="translate" id="vn-tw">Chinese</button>
+    
+    <ul>
+        <li class="lang" key="HOME">HOME</li>
+        <li class="lang" key="ABOUT"></li>
+        <li class="lang" key="CONTACT"></li>
+    </ul>
     <div id="steps-form-detail" class="steps-form container mt-5">
         <div id="step-form" class="steps-row setup-panel">
             <div id="step-1" class="steps-step">
@@ -85,6 +94,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
