--- a/Giaodien/index.html
+++ b/Giaodien/index.html
@@ -22,14 +22,14 @@
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">
                 <i class="fas fa-home"></i>
-                Home
+                <span class="lang" key="Home">Trang chủ</span>
             </a>
             <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#!"><i
                     class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline mr-auto ml-0 ml-md-3 my-2 my-md-0">
                 <div class="input-group">
-                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search"
+                    <input class="form-control lang" key="Search-for" type="text" placeholder="Tìm kiếm..." aria-label="Search"
                         aria-describedby="basic-addon2" />
                     <div class="input-group-append">
                         <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
@@ -42,13 +42,36 @@
                 <div class="nav-item dropdown">
                     <button class="btn btn-secondary  dropdown-toggle" type="button" id="userDropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-user fa-fw"></i> Username
+                        <i class="fas fa-user fa-fw"></i> <span class="lang" key="Username">Tên đăng nhập</span>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                         <a class="dropdown-item" href="#!">Settings</a>
                         <a class="dropdown-item" href="#!">Activity Log</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="login.html">Logout</a>
+                    </div>
+                </div>
+
+                <div class="nav-item dropdown ml-2">
+                    <button class="btn btn-secondary  dropdown-toggle" type="button" id="userDropdown"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="./assets/img/vietnam.png" alt="" class="mr-1 icon-lang"><span class="text-lang">Tiếng Việt</span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <a id="vi" class="dropdown-item translate" href="#!"><img src="./assets/img/vietnam.png" alt="">
+                            Tiếng Việt
+
+                        </a>
+                        <a id="en" class="dropdown-item translate" href="#!"><img src="./assets/img/united-states.png"
+                                alt="">
+                            Tiếng Anh
+
+                        </a>
+                        <a id="ja" class="dropdown-item translate" href="#!"><img src="./assets/img/japan.png" alt="">
+                            Tiếng Nhật
+
+                        </a>
+
                     </div>
                 </div>
             </ul>
@@ -63,25 +86,25 @@
 
                         <a class="nav-link mt-4" href="./summary.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Tổng kết
+                            <span class="lang" key="Summary">Tổng kết</span>
                         </a>
                         <button class="btn btn-secondary ml-3 mr-5 mt-3" data-toggle="modal"
                             data-target="#findRequestForm">
                             <i class="fas fa-plus text-white"></i>
-                            Tạo đề xuất mới
+                            <span class="lang" key="create-request">Tạo đề xuất mới</span>
                         </button>
 
                         <div class="custom-control custom-checkbox ml-3 mt-4">
                             <input type="checkbox" class="custom-control-input" id="sendToMe" />
-                            <label class="custom-control-label" for="sendToMe">Gửi đến tôi</label>
+                            <label class="custom-control-label lang" key="send-to-me" for="sendToMe">Gửi đến tôi</label>
                         </div>
                         <div class="custom-control custom-checkbox ml-3 mt-4">
                             <input type="checkbox" class="custom-control-input" id="myRequest" />
-                            <label class="custom-control-label" for="myRequest">Tôi gửi đi</label>
+                            <label class="custom-control-label lang" key="my-request" for="myRequest">Tôi gửi đi</label>
                         </div>
                         <div class="custom-control custom-checkbox ml-3 mt-4">
                             <input type="checkbox" class="custom-control-input" id="myFollow">
-                            <label class="custom-control-label" for="myFollow">Đang theo dõi</label>
+                            <label class="custom-control-label lang" key="following" for="myFollow">Đang theo dõi</label>
                         </div>
                         <div class="sb-sidenav-menu-heading">Form biểu</div>
                         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseLayouts"
@@ -149,7 +172,7 @@
                     <div class="">
                         <div class="card-body">
                             <a href="./index.html" style="text-decoration: none;">
-                                <span class="font-title text-muted">Danh sách đề xuất</span>
+                                <span class="font-title text-muted lang" key="list-request">Danh sách đề xuất</span>
                             </a>
 
                             <ul class="nav mt-4" id="myTab" role="tablist">
@@ -157,21 +180,21 @@
                                     <a class="nav-link active" id="all-tab" data-toggle="tab" aria-controls="inbox"
                                         href="#inbox" role="tab" aria-selected="true">
                                         <span class="d-block d-md-none"><i class="ti-email"></i></span>
-                                        <span class="d-none d-md-block"> Tất cả</span>
+                                        <span class="d-none d-md-block lang" key="all"> Tất cả</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="comming-tab" data-toggle="tab" aria-controls="sent"
                                         href="#sent" role="tab" aria-selected="false">
                                         <span class="d-block d-md-none"><i class="ti-export"></i></span>
-                                        <span class="d-none d-md-block">Đến lượt</span>
+                                        <span class="d-none d-md-block lang" key="in-turn">Đến lượt</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" id="dealine-tab" data-toggle="tab" aria-controls="spam"
                                         href="#spam" role="tab" aria-selected="false">
                                         <span class="d-block d-md-none"><i class="ti-panel"></i></span>
-                                        <span class="d-none d-md-block">Quá hạn</span>
+                                        <span class="d-none d-md-block lang" key="overdue">Quá hạn</span>
                                     </a>
                                 </li>
 
@@ -487,6 +510,7 @@
     <script type='text/javascript' src="js/bootstrap-typeahead.js"></script>
     <script type='text/javascript' src="js/mention.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/lang.js"></script>
 </body>
 
 </html>
